--- a/БОСОНОЖКИ.html
+++ b/БОСОНОЖКИ.html
@@ -57,11 +57,11 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="ВСЕ-КАТЕГОРИИ.html">Все категории</a></li>
-                    <li><a href="ПОЛУБОТИНКИ.html" class="active" id="nav-tel">Полуботинки</a></li>
+                    <li><a href="ПОЛУБОТИНКИ.html">Полуботинки</a></li>
                     <li><a href="КРОСОВКИ.html">Кросовки</a></li>
                     <li><a href="КЕДЫ.html">Кеды</a></li>
                     <li><a href="ТУФЛИ.html">Туфли</a></li>
-                    <li><a href="БОСОНОЖКИ.html">Босоножки</a></li>
+                    <li><a href="БОСОНОЖКИ.html" class="active" id="nav-tel">Босоножки</a></li>
                     <li><a href="САНДАЛИ.html">Сандали</a></li>
                     <li><a href="СЛАНЦЫ.html">Сланцы</a></li>
                     <li><a href="БАЛЕТКИ.html">Балетки</a></li>
